--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,11 +4,13 @@ os: Windows Server 2012 R2
 
 environment:
   GOPATH: c:\gopath
+  TMP: C:\tmp
 #  GOVERSION: 1.7
 
 clone_folder: c:\gopath\src\github.com\kardianos\govendor
 
 install:
+  - mkdir c:\tmp
   - go version
   - set PATH=%GOPATH%\bin;c:\go\bin;%PATH%
 #  - rmdir c:\go /s /q
@@ -19,4 +21,4 @@ install:
 
 build_script:
   - go test -i ./...
-  - go test -v ./...
+  - go test ./...
