--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ os: Windows Server 2012 R2
 
 environment:
   GOPATH: c:\gopath
-#  GOVERSION: 1.7
+  GOVERSION: 1.7
 
 clone_folder: c:\gopath\src\github.com\kardianos\govendor
 
@@ -13,9 +13,9 @@ install:
   - set TMP=C:\tmp
   - go version
   - set PATH=%GOPATH%\bin;c:\go\bin;%PATH%
-#  - rmdir c:\go /s /q
-#  - appveyor DownloadFile https://storage.googleapis.com/golang/go%GOVERSION%.windows-amd64.zip
-#  - 7z x go%GOVERSION%.windows-amd64.zip -y -oC:\ > NUL
+  - rmdir c:\go /s /q
+  - appveyor DownloadFile https://storage.googleapis.com/golang/go%GOVERSION%.windows-amd64.zip
+  - 7z x go%GOVERSION%.windows-amd64.zip -y -oC:\ > NUL
   - go version
   - go env
 
